--- a/example/html/README.org
+++ b/example/html/README.org
@@ -12,7 +12,7 @@ This example generates a complete (X)HTML file ([[./index.html][index.html]]) fr
 - =../data.xml=: The input XPubLiCon XML file
 - =./Makefile=: The makefile to define the rule of file generation
 - =./index_template.html=: The XML file that is a template of the generated (X)HTML file
-- =../../xslt/publications_html.xsl=, =../../xslt/talks_html.xsl=, =../../xslt/tools_html.xsl=: The XSLT files to generate a fragments of (X)HTML files from =../data.xml=
+- =../../xslt/publications_html.xsl=, =../../xslt/talks_html.xsl=, =../../xslt/tools_html.xsl=, =../../xslt/teaching_experience_html.xsl=: The XSLT files to generate a fragments of (X)HTML files from =../data.xml=
 - =./style.css=: The stylesheet CSS file used in the generated (X)HTML file
 
 ** Usage
@@ -58,6 +58,9 @@ In the following part, [[https://www.w3.org/TR/xinclude/][XML Inclusions (XInclu
 
 <h2>Selected Talks</h2>
   <xi:include href="talks.html" parse="xml" />
+
+<h2>Teaching Experiences</h2>
+  <xi:include href="teaching_experience.html" parse="xml" />
 #+END_SRC
 
 *** Makefile to Generate Complete (X)HTML File
@@ -70,7 +73,7 @@ The following is the Makefile to generate a complete HTML file.
 <<GENERATE_FRAGMENT>>
 
 clean:
-	$(RM) publications.html tools.html talks.html index.html
+	$(RM) publications.html tools.html talks.html teaching_experience.html index.html
 .PHONY: clean
 #+END_SRC
 
@@ -90,7 +93,7 @@ Then, we make a rule to generate a complete (X)HTML file by combining the (X)HTM
 
 #+NAME: GENERATE_WHOLE
 #+BEGIN_SRC makefile
-index.html: index_template.html publications.html tools.html talks.html
+index.html: index_template.html publications.html tools.html talks.html teaching_experience.html
 	xmllint $< --xinclude --output $@ --noent
 #+END_SRC
 
