--- a/html/README.org
+++ b/html/README.org
@@ -61,6 +61,9 @@ In the following part, [[https://www.w3.org/TR/xinclude/][XML Inclusions (XInclu
 
 <h2>Teaching Experiences</h2>
   <xi:include href="teaching_experience.html" parse="xml" />
+
+<h2>Professional Services</h2>
+  <xi:include href="professional_services.html" parse="xml" />
 #+END_SRC
 
 *** Makefile to Generate Complete (X)HTML File
@@ -93,7 +96,7 @@ Then, we make a rule to generate a complete (X)HTML file by combining the (X)HTM
 
 #+NAME: GENERATE_WHOLE
 #+BEGIN_SRC makefile
-index.html: index_template.html publications.html tools.html talks.html teaching_experience.html
+index.html: index_template.html publications.html tools.html talks.html teaching_experience.html professional_services.html
 	xmllint $< --xinclude --output $@ --noent
 #+END_SRC
 
